Curve 2D resets to 3D on reload #87274

Closed
opened 2021-04-07 21:22:09 +02:00 by Steffen Dünner · 6 comments

System Information
Operating system: Linux-5.8.0-48-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-07 18:23, hash: 1a8db9ec04
Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-20 21:00, hash: 9ca67c47a1, type: Release ... and all previous releases.

Short description of error
Setting a curve to 2D and "Fill Mode" to "Back", "Front" or "Both" works like expected and results in a filled curve object. Saving and reloading the blend file causes the 2D setting to revert to 3D.

Exact steps for others to reproduce the error

  • Either open the attached blend file Curve_2D_Bug_v02.blend and depending on what build of Blender you use the circle curve object is either 2D ( = correct) or 3D ( = bug).
  • Alternatively open a new scene, add a "Curve > Circle" and set its options to 2D and "Fill Mode" to "Both".
  • Save the file and reload it -> the curve object is set to 3D again and thus no longer filled.
**System Information** Operating system: Linux-5.8.0-48-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-07 18:23, hash: `1a8db9ec04` Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-20 21:00, hash: 9ca67c47a152, type: Release ... and all previous releases. **Short description of error** Setting a curve to 2D and "Fill Mode" to "Back", "Front" or "Both" works like expected and results in a filled curve object. Saving and reloading the blend file causes the 2D setting to revert to 3D. **Exact steps for others to reproduce the error** - Either open the attached blend file [Curve_2D_Bug_v02.blend](https://archive.blender.org/developer/F9923207/Curve_2D_Bug_v02.blend) and depending on what build of Blender you use the circle curve object is either 2D ( = correct) or 3D ( = bug). - Alternatively open a new scene, add a "Curve > Circle" and set its options to 2D and "Fill Mode" to "Both". - Save the file and reload it -> the curve object is set to 3D again and thus no longer filled.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2021-04-07 21:39:14 +02:00
Member

Can confirm. This should be solved quickly to avoid breaking files.

Most likely caused by f674976edd

Can confirm. This should be solved quickly to avoid breaking files. Most likely caused by f674976edd

This issue was referenced by b7b1b2325c

This issue was referenced by b7b1b2325c1a280f1e038736406cf75c4c8b9a05

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87274
No description provided.